--- a/.github/workflows/milestone.yml
+++ b/.github/workflows/milestone.yml
@@ -8,8 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Create Release Notes
-      uses: docker://decathlon/release-notes-generator-action:2.0.1
+      uses: Cossey/release-notes-generator-action@v2.1.4
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         OUTPUT_FOLDER: temp_release_notes
-        USE_MILESTONE_TITLE: "true"
