--- a/.github/workflows/milestone.yml
+++ b/.github/workflows/milestone.yml
@@ -1,3 +1,4 @@
+# Trigger the workflow on milestone events
 on: 
   milestone:
     types: [closed]
@@ -7,8 +8,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Create Release Notes
-      uses: Cossey/release-notes-generator-action@v2.1.4
+    - name: Create Release Notes Markdown
+      uses: docker://decathlon/release-notes-generator-action:3.0.1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         OUTPUT_FOLDER: temp_release_notes
+        USE_MILESTONE_TITLE: "true"
+    - name: Get the name of the created Release Notes file and extract Version
+      run: |
+        RELEASE_NOTES_FILE=$(ls temp_release_notes/*.md | head -n 1)
+        echo "RELEASE_NOTES_FILE=$RELEASE_NOTES_FILE" >> $GITHUB_ENV
+        VERSION=$(echo ${{ github.event.milestone.title }} | cut -d' ' -f2)
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+    - name: Create a Draft Release Notes on GitHub
+      id: create_release
+      uses: actions/create-release@v1.1.4
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      with:
+        tag_name: tag-${{ env.VERSION }}
+        release_name:  ${{ github.event.repository.name }} v${{ env.VERSION }}
+        body_path: ${{ env.RELEASE_NOTES_FILE }}
+        draft: true
